feat: publish intelligent customer service platform